# hathor

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md
api/: pyproject.toml
api/src/hathor/: agent_prompt.py  flagship_scenario.py  hello_agent.py  run_agent.py  server.py  server_sessions.py
api/src/hathor/fhir/: __init__.py  provenance.py
api/src/hathor/parsing/: __init__.py  dates.py
api/src/hathor/safety/: __init__.py  phase_d.py  phase_e.py
api/src/hathor/schedules/: __init__.py  age.py  vaccine_synonyms.py  validation.py
api/src/hathor/schemas/: __init__.py  extraction.py  recommendation.py
api/src/hathor/specialists/: __init__.py  _base.py  attending_physician.py  catch_up_planner.py  source_country.py  translator.py  who_baseline.py
api/src/hathor/tools/: __init__.py  age_math.py  card_extraction.py  card_extraction_subagent.py  catchup.py  consult_specialists.py  coverage.py  dose_validation.py  emit_recommendations.py  intervals.py  schedule.py  vaccine_lookup.py
api/tests/: test_agent_schema.py  test_booster_and_red_gate.py  test_card_extraction_stub.py  test_date_parser.py  test_dose_tools.py  test_phase_d.py  test_phase_e.py  test_phase_e_override.py  test_schedule_seed_support.py  test_server.py  test_server_hitl.py
cards/: README.md
docs/: CLINICAL_DECISIONS.md  DEFERRED_DOC_UPDATES.md  HACKATHON_DEMO_SCRIPT.md  HIPAA_ASSESSMENT.md  PII_HARDENING.md  REFERENCES.md  SAFETY_LOOPS.md  SESSION_HANDOFF.md  africa_schedule_support_matrix.md  dak-mapping-plan.md  dak-questions.md  hitl-ui-design.md  ocr-sources.md  schema-proposal.md  (+1 more)
(+102 files in other folders)
