[project]
name = "hathor"
version = "0.1.0"
description = "Autonomous clinical reasoning agent for cross-border vaccination schedule reconciliation"
authors = [{ name = "Ahmed Zayed" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.63",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "anyio",
    # Phase C seed (Commit 8) — used only by hathor.fhir.provenance to produce
    # FHIR R4 Provenance resources for clinical overrides. IMMZ-aligned
    # architecture; not an IMMZ-conformant implementation yet.
    "fhir.resources>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
